/*
 * $Id: ChangeLog,v 1.751 2003/02/21 12:17:14 iananderson Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-02-21 12:02 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  ! make_b32.bat
   + copy of hvm*.obj from obj\b32 to lib directory

2003-02-21 13:20 UTC+0100 Ian Anderson <ianderson@procon-online.de>
  * source/rtl/gtapi.c
    % optimize out repeated calls to lower level to get screen size
  
2003-02-20 20:36 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/vm/fm.c
   ! Added missing ; to return pMem

2003-02-20 14:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/pushbtn.prg
   ! Fixed minor compilation Error IIF(( to IIF(

2003-02-20 12:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/pushbtn.prg
    source/rtl/scrollbr.prg
    ! Source code reformatted

2003-02-20 12:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * contrib/mysql/tsqlbrw.prg
    % optimize to use Switch insted of Do case where possible

2003-02-20 13:20 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/garbage.c
    ! Now the hb_allocMutex must be defined also if statistic
      are off.
      

2003-02-19 23:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/checkbox.prg
    ! Source code reformatted
  * contrib/mysql/mysql.prg
    ! Changes Bellow provided and fixed by Rafael Letocart
     Tests on long AND short date format (I only do it on BRITICH format)
     Use the function PadR() for the VarChar fields to be ended with blank
     space.
     Added the class function LOCATE. The bSoftSeek parameter must be used with
     a sorted field. I haven't fully test it. This function is not built for only
     sorted table. Perhaps an other function (like seek()) could be written for
     this (with a dicotomic search for example)? Any example of a search in a